--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,10 @@
     "ember-qunit": "0.1.8",
     "ember-qunit-notifications": "0.0.4",
     "qunit": "~1.15.0",
-    "i18n-js": "~1.0.0"
+    "i18n-js": "~1.0.0",
+    "seiyria-bootstrap-slider": "4.4.0",
+    "bootstrap": "3.3.1",
+    "bootstrap-sass-official": "3.3.1",
+    "foundation": "~5.5.0"
   }
 }
